--- a/index.html
+++ b/index.html
@@ -27,5 +27,18 @@
         <a href="#" class="btn btn--white btn--animated">Discover out tour</a>
       </div>
     </header>
+    <main class="main">
+      <section class="section-about">
+        <div class="centerText">
+          <h2 class="heading-secondary">
+            EXCITING TOURS FOR ADVENTUROUS PEOPLE
+          </h2>
+        </div>
+        <div class="about-content">
+          <div class="about-text-box"></div>
+          <div class="about-image-box"></div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
