the about section created completely

--- a/index.html
+++ b/index.html
@@ -34,9 +34,44 @@
             EXCITING TOURS FOR ADVENTUROUS PEOPLE
           </h2>
         </div>
-        <div class="about-content">
-          <div class="about-text-box"></div>
-          <div class="about-image-box"></div>
+        <div class="wrapper">
+          <div class="about-content">
+            <div class="about-text-box">
+              <h3 class="heading-tertiary">
+                YOU'RE GOING TO FALL IN LOVE WITH NATURE
+              </h3>
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ex,
+                consequatur temporibus harum voluptates illo, soluta odio,
+                magnam quae consequuntur voluptatum voluptas. Accusamus sit
+                veniam vero itaque labore saepe reiciendis?
+              </p>
+
+              <h3 class="heading-tertiary">
+                LIVE ADVENTURES LIKE YOU NEVER HAVE BEFORE
+              </h3>
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ex,
+                consequatur temporibus harum voluptates illo, soluta odio,
+                magnam quae consequuntur voluptatum voluptas.
+              </p>
+              <a href="#" class="btn-text">Learn more &rarr;</a>
+            </div>
+            <div class="image-box">
+              <img
+                src="img/nat-1-large.jpg"
+                alt="A photo"
+                class="image-box__photos--p1 image-box__photos" />
+              <img
+                src="img/nat-2-large.jpg"
+                alt="A photo"
+                class="image-box__photos--p2 image-box__photos" />
+              <img
+                src="img/nat-3-large.jpg"
+                alt="A photo"
+                class="image-box__photos--p3 image-box__photos" />
+            </div>
+          </div>
         </div>
       </section>
     </main>
